--- a/Case 2.html
+++ b/Case 2.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Case 2</title>
 </head>
 <body>
-
+    <header></header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
