--- a/Case 2.html
+++ b/Case 2.html
@@ -5,8 +5,51 @@
     <title>Case 2</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <nav></nav>
+    </header>
+    <main>
+        <section>
+            <aside></aside>
+            <aside></aside>
+        </section>
+
+        <section>
+            <article>
+                <hgroup>
+                    <h1></h1>
+                    <h4></h4>
+                </hgroup>
+            </article>
+            <aside></aside>
+        </section>
+
+        <section>
+            <h1></h1>
+            <section></section>
+            <section></section>
+            <section></section>
+            <nav></nav>
+        </section>
+
+        <section>
+            <aside>
+                <section></section>
+                <section></section>
+                <section></section>
+            </aside>
+            <section></section>
+        </section>
+
+        <section>
+            <section></section>
+            <address></address>
+        </section>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
