--- a/Case 2.html
+++ b/Case 2.html
@@ -5,39 +5,38 @@
     <title>Case 2</title>
 </head>
 <body>
+
     <header>
         <nav></nav>
     </header>
+
     <main>
+<!--        image and other recore nm continer usefull-->
+<!--        but only image not use container-->
         <section>
-            <aside></aside>
             <aside></aside>
         </section>
 
         <section>
-            <article>
-                <hgroup>
-                    <h1></h1>
-                    <h4></h4>
-                </hgroup>
-            </article>
+<!--            heading used only section-->
+           <section>
+
+               <hgroup>
+                   <h1>software</h1>
+               </hgroup>
+
+               <article></article>
+           </section>
+
             <aside></aside>
         </section>
 
         <section>
-            <h1></h1>
-            <section></section>
-            <section></section>
-            <section></section>
+            <h1>my Project</h1>
+        </section>
+
+        <section>
             <nav></nav>
-        </section>
-
-        <section>
-            <aside>
-                <section></section>
-                <section></section>
-                <section></section>
-            </aside>
             <section></section>
         </section>
 
