--- a/Case 3.html
+++ b/Case 3.html
@@ -11,5 +11,14 @@
         A   A   A   A   A   A   A
           A   A   A   A   A   A
     </pre>
+
+<!--    unorder list altanative option-->
+    <menu>
+        <li>food</li>
+        <li>rice</li>
+    </menu>
+
+
+    <hr>
 </body>
 </html>
