--- a/Case 3.html
+++ b/Case 3.html
@@ -19,6 +19,18 @@
     </menu>
 
 
+<!--    limatic break-->
     <hr>
+<!--use caption with other eliment-->
+    <figure>
+<!--        element-->
+        <img src="Case%203.html">
+        <figcaption>
+            this is elephent at sun set
+        </figcaption>
+
+
+
+    </figure>
 </body>
 </html>
