--- a/Case 3.html
+++ b/Case 3.html
@@ -29,8 +29,11 @@
             this is elephent at sun set
         </figcaption>
 
-
-
     </figure>
+
+<!--    sided content-->
+    <blockquote cite="url!!!!!!">
+        text content
+    </blockquote>
 </body>
 </html>
