--- a/Case 3.html
+++ b/Case 3.html
@@ -5,6 +5,11 @@
     <title>Case 3</title>
 </head>
 <body>
+
+    <div>
+<!--        medeum content list        -->
+    </div>
+
     <pre>
         A   A   A   A   A   A   A
           A   A   A   A   A   A
@@ -31,9 +36,10 @@
 
     </figure>
 
-<!--    sided content-->
+<!--    sided content/suggestion/ cite get recource supplier-->
     <blockquote cite="url!!!!!!">
         text content
     </blockquote>
+
 </body>
 </html>
