--- a/Case 4.html
+++ b/Case 4.html
@@ -6,9 +6,9 @@
 </head>
 <body>
   <ul>
-    <li><a href="assets/doc1/download/a.pdf" download="a.pdf"> A - Download a.pdf</a></li>
-    <li><a href="assets/doc1/download/b.pdf" download="b.pdf">B - Download b.pdf</a></li>
-    <li><a href="assets/doc1/download/c.pdf" download="c.pdf">C - Download c.pdf</a></li>
+    <li>A - <a href="assets/doc1/download/a.pdf" download="a.pdf"> Download a.pdf</a></li>
+    <li>B - <a href="assets/doc1/download/b.pdf" download="b.pdf">Download b.pdf</a></li>
+    <li>C -<a href="assets/doc1/download/c.pdf" download="c.pdf">C - Download c.pdf</a></li>
 
   </ul>
 </body>
