--- a/Case 5.html
+++ b/Case 5.html
@@ -9,5 +9,9 @@
 <a href="http://ijse.lk" target="_self">goto ijse self</a>
 <a href="http://ijse.lk" target="_blank">goto ijse blank</a>
 
+<p>institute of software <br> engineering</br></p>
+
+<p>IJSE <abbr title="Graduate diploma in software engineering">GDSE</abbr> course</p>
+
 </body>
 </html>
