add <b> <strong><em>

--- a/Case 5.html
+++ b/Case 5.html
@@ -13,5 +13,9 @@
 
 <p>IJSE <abbr title="Graduate diploma in software engineering">GDSE</abbr> course</p>
 
+<strong>This is the Number One Institute for IT</strong>
+<p>Get out of bed <em>now</em>!</p>
+<b>attention text</b>
+
 </body>
 </html>
