text derection changing tags

--- a/Case 5.html
+++ b/Case 5.html
@@ -17,5 +17,15 @@
 <p>Get out of bed <em>now</em>!</p>
 <b>attention text</b>
 
+the text it contains in isolation from its surrounding text-->
+<bdi></bdi>
+
+<p><bdi>الرجل القوي إيان</bdi>: 4th place</p>
+
+<!--Overrides the current directionality of text-->
+<!--rtl and ltr-->
+<bdo dir="rtl">Haai</bdo>
+
+
 </body>
 </html>
