add code fragmented !

--- a/Case 5.html
+++ b/Case 5.html
@@ -24,8 +24,13 @@ the text it contains in isolation from its surrounding text-->
 
 <!--Overrides the current directionality of text-->
 <!--rtl and ltr-->
-<bdo dir="rtl">Haai</bdo>
+<bdo dir="rtl">Haai</bdo> <br>
 
+<!--Used to mark up the title of a cited creative work-->
+<cite>by George Orwell (Part 1, Chapter 1).</cite>
+
+<!--short fragment of computer code-->
+<code>shift()</code>
 
 </body>
 </html>
