text derection changing tags

--- a/Case 5.html
+++ b/Case 5.html
@@ -30,7 +30,7 @@ the text it contains in isolation from its surrounding text-->
 <cite>by George Orwell (Part 1, Chapter 1).</cite>
 
 <!--short fragment of computer code-->
-<code>shift()</code>
+<p>this is programming <code>shift()</code> method</p>
 
 </body>
 </html>
