--- a/Case 5.html
+++ b/Case 5.html
@@ -5,6 +5,10 @@
     <title>5</title>
 </head>
 <body>
+
+<!--define link-->
+<a href="#cintact">clic</a>
+
 <!--link opening aspects-->
 <a href="http://ijse.lk" target="_self">goto ijse self</a>
 <a href="http://ijse.lk" target="_blank">goto ijse blank</a>
@@ -31,6 +35,14 @@ the text it contains in isolation from its surrounding text-->
 
 <!--short fragment of computer code-->
 <p>this is programming <code>shift()</code> method</p>
+
+<menu>
+    <li><data value="100"></data></li>
+    <li></li>
+</menu>
+
+<!--scrolle auto -->
+<dfn id="cintact">ijse</dfn>
 
 </body>
 </html>
