add key bord input definr eliment

--- a/Case 5.html
+++ b/Case 5.html
@@ -7,7 +7,7 @@
 <body>
 
 <!--define link-->
-<a href="#cintact">clic</a>
+<a href="#cintact">click</a>
 
 <!--link opening aspects-->
 <a href="http://ijse.lk" target="_self">goto ijse self</a>
@@ -43,6 +43,10 @@ the text it contains in isolation from its surrounding text-->
 
 <!--scrolle auto -->
 <dfn id="cintact">ijse</dfn>
+
+<i>sample italic </i> <br>
+
+<kbd>Ctrl</kbd>
 
 </body>
 </html>
