--- a/Case 5.html
+++ b/Case 5.html
@@ -46,7 +46,13 @@ the text it contains in isolation from its surrounding text-->
 
 <i>sample italic </i> <br>
 
-<kbd>Ctrl</kbd>
+<!--keyboard input-->
+<p>sample <kbd>Ctrl</kbd> ctr</p>
+
+<mark>hellow</mark>
+
+<q>this is quotation mark add auto maticaly</q>
+
 
 </body>
 </html>
