--- a/Case 5.html
+++ b/Case 5.html
@@ -51,7 +51,9 @@ the text it contains in isolation from its surrounding text-->
 
 <mark>hellow</mark>
 
-<q>this is quotation mark add auto maticaly</q>
+<q>this is quotation mark add auto maticaly</q> <br>
+
+<s>this is discount 78%</s>
 
 
 </body>
