--- a/Case 5.html
+++ b/Case 5.html
@@ -55,6 +55,9 @@ the text it contains in isolation from its surrounding text-->
 
 <s>this is discount 78%</s>
 
+<samp></samp>
+<p><samp>Keyboard not found <br>Press F1 to continue</samp></p>
+
 
 </body>
 </html>
