--- a/Case 5.html
+++ b/Case 5.html
@@ -58,6 +58,12 @@ the text it contains in isolation from its surrounding text-->
 <samp></samp>
 <p><samp>Keyboard not found <br>Press F1 to continue</samp></p>
 
+<small>All right recivers &reg; &copy;</small><br>
+
+<span></span>
+<span style="color: red">Some Text</span>
+
+
 
 </body>
 </html>
