--- a/Case 5.html
+++ b/Case 5.html
@@ -71,5 +71,13 @@ the text it contains in isolation from its surrounding text-->
  variable in a mathematical expression or a programming context-->
 <var>int i</var>
 
+<!--The Line Break Opportunity element-->
+<!--The <wbr> HTML element represents a word break
+opportunity—a position within text where the browser may
+ optionally break a line,-->
+<wbr>
+
+<p>sample text <wbr>for</p>
+
 </body>
 </html>
