add support types in image

--- a/Case 6.html
+++ b/Case 6.html
@@ -6,5 +6,12 @@
 </head>
 <body>
     <img src="assets/images/jpeg%20image.jpg" alt="sample image">
+    <img src="assets/images/gif-image.gif" alt="sample image">
+    <img src="assets/images/image.png" alt="sample image">
+    <img src="assets/images/webp-image.webp" alt="sample image">
+
+
+
+
 </body>
 </html>
