add multimedia cases

--- a/Case 6.html
+++ b/Case 6.html
@@ -10,6 +10,9 @@
     <img src="assets/images/image.png" alt="sample image">
     <img src="assets/images/webp-image.webp" alt="sample image">
 
+    <img width="300" src="assets/images/webp-image.webp" alt="sample image">
+    <img height="300" src="assets/images/webp-image.webp" alt="sample image">
+
 
 
 
