--- a/Case 6.html
+++ b/Case 6.html
@@ -13,6 +13,8 @@
     <img width="300" src="assets/images/webp-image.webp" alt="sample image">
     <img height="300" src="assets/images/webp-image.webp" alt="sample image">
 
+    <audio src="assets/audio/audio.mp3" controls></audio>
+
 
 
 
