--- a/Case 6.html
+++ b/Case 6.html
@@ -13,7 +13,7 @@
     <img width="300" src="assets/images/webp-image.webp" alt="sample image">
     <img height="300" src="assets/images/webp-image.webp" alt="sample image">
 
-    <audio src="assets/audio/audio.mp3" controls autoplay loop ></audio>
+    <audio src="assets/audio/audio.mp3" controls autoplay muted ></audio>
 
     <!--auto play
     loop
