add vedio tag track block

--- a/Case 6.html
+++ b/Case 6.html
@@ -20,7 +20,14 @@
     mute
     -->
 
-    <video src="assets/video/movie-sample.mp4" controls></video>
+    <video src="assets/video/movie-sample.mp4" controls autoplay    >
+        <track default
+        kind="captions"
+        srclang="en"
+        src="assets/media/caption.vtt">
+    </video>
+<!--        has width height attribute-->
+
 
 
 
