--- a/Case 6.html
+++ b/Case 6.html
@@ -28,9 +28,10 @@
     </video>
 <!--        has width height attribute-->
 
-
-
-
+    <map name="testMap">
+        <area shape="circle" coords="0,10,20,0" href="" alt="go to ijse">
+        <area shape="rect" href="" alt="go to ijse">
+    </map>
 
 </body>
 </html>
