create image map

--- a/Case 6.html
+++ b/Case 6.html
@@ -5,32 +5,34 @@
     <title>Case 6</title>
 </head>
 <body>
-    <img src="assets/images/jpeg%20image.jpg" alt="sample image">
-    <img src="assets/images/gif-image.gif" alt="sample image">
-    <img src="assets/images/image.png" alt="sample image">
-    <img src="assets/images/webp-image.webp" alt="sample image">
+<!--    <img usemap="#testMap" src="assets/images/jpeg%20image.jpg" alt="sample image">-->
+<!--    <img src="assets/images/gif-image.gif" alt="sample image">-->
+    <img width="400" usemap="#testMap" src="assets/images/image.png" alt="sample image">
+<!--    <img usemap="#testMap" src="assets/images/webp-image.webp" alt="sample image">-->
 
-    <img width="300" src="assets/images/webp-image.webp" alt="sample image">
-    <img height="300" src="assets/images/webp-image.webp" alt="sample image">
+<!--    <img width="300" src="assets/images/webp-image.webp" alt="sample image">-->
+<!--    <img height="300" src="assets/images/webp-image.webp" alt="sample image">-->
 
-    <audio src="assets/audio/audio.mp3" controls autoplay muted ></audio>
+<!--    <audio src="assets/audio/audio.mp3" controls autoplay muted ></audio>-->
 
     <!--auto play
     loop
     mute
     -->
 
-    <video src="assets/video/movie-sample.mp4" controls autoplay    >
-        <track default
-        kind="captions"
-        srclang="en"
-        src="assets/media/caption.vtt">
-    </video>
+<!--    <video src="assets/video/movie-sample.mp4" controls autoplay    >-->
+<!--        <track default-->
+<!--        kind="captions"-->
+<!--        srclang="en"-->
+<!--        src="assets/media/caption.vtt">-->
+<!--    </video>-->
 <!--        has width height attribute-->
 
     <map name="testMap">
-        <area shape="circle" coords="0,10,20,0" href="" alt="go to ijse">
-        <area shape="rect" href="" alt="go to ijse">
+        <area shape="rect" coords="0,0,200,200" href="https://www.google.com/search?q=yahoo&oq=yahoo&aqs=chrome.0.0i67i131i355i433i650j46i67i131i199i433i465i650j0i67i131i433i650l6.494891652j0j15&sourceid=chrome&ie=UTF-8" alt="go to ijse" target="_blank">
+        <area shape="rect" href="https://www.ijse.lk/" coords="800,200,200,200" alt="go to ijse">
+        <area shape="rect" href="https://www.ijse.lk/" coords="300,600,200,200" alt="go to ijse">
+        <area shape="rect" href="https://www.ijse.lk/" coords="400,700,200,100" alt="go to ijse">
     </map>
 
 </body>
