add image map components

--- a/Case 6.html
+++ b/Case 6.html
@@ -30,9 +30,9 @@
 
     <map name="testMap">
         <area shape="rect" coords="0,0,200,200" href="https://www.google.com/search?q=yahoo&oq=yahoo&aqs=chrome.0.0i67i131i355i433i650j46i67i131i199i433i465i650j0i67i131i433i650l6.494891652j0j15&sourceid=chrome&ie=UTF-8" alt="go to ijse" target="_blank">
-        <area shape="rect" href="https://www.ijse.lk/" coords="800,200,200,200" alt="go to ijse">
-        <area shape="rect" href="https://www.ijse.lk/" coords="300,600,200,200" alt="go to ijse">
-        <area shape="rect" href="https://www.ijse.lk/" coords="400,700,200,100" alt="go to ijse">
+        <area shape="rect" href="https://www.ijse.lk/" coords="800,0,200,200" alt="go to ijse">
+        <area shape="rect" href="https://www.hackerrank.com/dashboard" coords="0,600,200,200" alt="go to ijse">
+        <area shape="rect" href="https://github.com/savindaJ?tab=repositories" coords="400,700,200,200" alt="go to ijse">
     </map>
 
 </body>
