--- a/Case 6.html
+++ b/Case 6.html
@@ -35,5 +35,8 @@
         <area shape="rect" href="https://github.com/savindaJ?tab=repositories" coords="400,700,200,200" alt="go to ijse">
     </map>
 
+<embed type="video/mp4" src="assets/video/movie-sample.mp4" width="640" height="480" title="Title of my video" />
+
+
 </body>
 </html>
