add iframe with yt

--- a/Case 7.html
+++ b/Case 7.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     <iframe src="https://www.ijse.lk/" width="1000" height="500" frameborder="60"></iframe>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/lJ5y-aoWQyY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
