add iframe with yt

--- a/Case 7.html
+++ b/Case 7.html
@@ -5,8 +5,10 @@
     <title>Case 7</title>
 </head>
 <body>
-    <iframe src="https://www.ijse.lk/" width="1000" height="500" frameborder="60"></iframe>
+    <iframe src="https://www.ijse.lk/" width="1350" height="500" frameborder="60"></iframe>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/lJ5y-aoWQyY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    <iframe src="https://google.com"></iframe>
 </body>
 </html>
