create iframe pdf viwer

--- a/Case 7.html
+++ b/Case 7.html
@@ -10,5 +10,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/lJ5y-aoWQyY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
     <iframe src="https://google.com"></iframe>
+
+    <object width="1000" height="6000" data="assets/doc1/pdf-data.pdf"></object>
 </body>
 </html>
