--- a/Case 7.html
+++ b/Case 7.html
@@ -11,6 +11,9 @@
 
     <iframe src="https://google.com"></iframe>
 
-    <object width="1000" height="6000" data="assets/doc1/pdf-data.pdf"></object>
+    <object width="1000" height="600" data="assets/doc1/pdf-data.pdf"></object>
+
+    <iframe width="500" height="600" src="https://chat.openai.com/c/1e2f379a-3baa-494d-8a8b-7a0b3b3bccf6"></iframe>
+
 </body>
 </html>
