--- a/Case 7.html
+++ b/Case 7.html
@@ -15,5 +15,10 @@
 
     <iframe width="500" height="600" src="https://chat.openai.com/c/1e2f379a-3baa-494d-8a8b-7a0b3b3bccf6"></iframe>
 
+<picture>
+    <source srcset="assets/images/image.png" media="(min-width: 600px)">
+    <img src="assets/images/git.gif">
+</picture>
+<!--        device compatible changing image-->
 </body>
 </html>
