--- a/Case 10(canvase).html
+++ b/Case 10(canvase).html
@@ -17,5 +17,11 @@
   ctx.fillRect(10,10,100,100)
 </script>
 
+<button onclick="myfunc()">sample</button>
+
+<script src="main.js">
+  myfunc();
+</script>
+
 </body>
 </html>
