add css in table

--- a/Case 12(table content).html
+++ b/Case 12(table content).html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Case 12</title>
+  <link rel="stylesheet" href="sample.css">
 </head>
 <body>
       <table >
