add table structure

--- a/Case 12(table content).html
+++ b/Case 12(table content).html
@@ -33,6 +33,12 @@
           <td>Cries at romcoms</td>
         </tr>
 
+        <tr>
+          <th scope="row">Titanic</th>
+          <td>sample 3 fort</td>
+          <td>sensitise in sample <br> Titanic</td>
+        </tr>
+
       </table>
 </body>
 </html>
