--- a/Case 12(table content).html
+++ b/Case 12(table content).html
@@ -39,6 +39,13 @@
           <td>sensitise in sample <br> Titanic</td>
         </tr>
 
+        <tfoot>
+        <tr>
+          <th scope="row">Totals</th>
+          <td>21,000</td>
+          <td>total experiment</td>
+        </tr>
+
       </table>
 </body>
 </html>
