--- a/Case 13(html form).html
+++ b/Case 13(html form).html
@@ -6,6 +6,20 @@
   <link rel="stylesheet" href="sample.css">
 </head>
 <body>
-  <button class="styled" type="button">Sample button</button>
+  <button class="styled" type="button">Sample button</button><br><br>
+
+
+    <label for="food-list">choose food one <br></label><br>
+
+    <input list="ice-cream-flavors" id="food-list" name="ice cream-choise">
+
+  <datalist id="ice-cream-flavors">
+      <option value="Chocolate">
+      <option value="Coconut">
+      <option value="Mint">
+      <option value="Strawberry">
+      <option value="Vanilla">
+  </datalist>
+
 </body>
 </html>
