--- a/Case 13(html form).html
+++ b/Case 13(html form).html
@@ -27,7 +27,17 @@
         <option value="12:00"></option>
         <option value="13:00"></option>
         <option value="14:00"></option>
-    </datalist>
+    </datalist><br><br>
+
+
+  <label for="tick">Tip amount:</label><br>
+  <input type="range" list="tickmarks" min="0" max="100" id="tick" name="tick" />
+  <datalist id="tickmarks">
+      <option value="0"></option>
+      <option value="10"></option>
+      <option value="20"></option>
+      <option value="30"></option>
+  </datalist>
 
 </body>
 </html>
