add color chooser

--- a/Case 13(html form).html
+++ b/Case 13(html form).html
@@ -37,6 +37,16 @@
       <option value="10"></option>
       <option value="20"></option>
       <option value="30"></option>
+  </datalist><br><br>
+
+  <label for="colors">Pick a color (preferably a red tone):</label>
+  <input type="color" list="redColors" id="colors" />
+
+  <datalist id="redColors">
+      <option value="#800000"></option>
+      <option value="#8B0000"></option>
+      <option value="#A52A2A"></option>
+      <option value="#DC143C"></option>
   </datalist>
 
 </body>
