--- a/Case 13(html form).html
+++ b/Case 13(html form).html
@@ -47,7 +47,22 @@
       <option value="#8B0000"></option>
       <option value="#A52A2A"></option>
       <option value="#DC143C"></option>
-  </datalist>
+  </datalist><br><br>
+
+  <label for="pwd">Enter a password:</label>
+  <input type="password" list="randomPassword" id="pwd" />
+  <datalist id="randomPassword">
+      <option value="5Mg[_3DnkgSu@!q#"></option>
+  </datalist><br><br>
+
+
+  <label>this is fieldset</label>
+
+    <form>
+        <fieldset>
+            <legend>choose your path</legend>
+        </fieldset>
+    </form>
 
 </body>
 </html>
