add input types

--- a/Case 13(html form).html
+++ b/Case 13(html form).html
@@ -61,6 +61,17 @@
     <form>
         <fieldset>
             <legend>choose your path</legend>
+            <input type="radio" id="kraken" name="monster" value="K">
+            <label for="kraken">Kraken</label><br><br>
+
+            <label for="text">enter name</label><br>
+            <input type="text" id="text" name="name-text"><br><br>
+
+            <label for="this-is-button">click hear</label>
+            <button id="this-is-button">submit</button><br><br>
+
+            <label for="check-box">this is check-box</label>
+            <input type="checkbox" id="check-box">
         </fieldset>
     </form>
 
