--- a/Case 13(html form).html
+++ b/Case 13(html form).html
@@ -59,6 +59,7 @@
   <label>this is fieldset</label>
 
     <form>
+<!--        used deseble attribute-->
         <fieldset>
             <legend>choose your path</legend>
             <input type="radio" id="kraken" name="monster" value="K">
@@ -71,8 +72,13 @@
             <button id="this-is-button">submit</button><br><br>
 
             <label for="check-box">this is check-box</label>
-            <input type="checkbox" id="check-box">
-        </fieldset>
+            <input type="checkbox" id="check-box" value="checked !">
+
+        </fieldset><br><br>
+
+        <progress value="70" max="100">70 %</progress><br><br>
+
+
     </form>
 
 </body>
