--- a/Case 13(html form).html
+++ b/Case 13(html form).html
@@ -81,5 +81,26 @@
 
     </form>
 
+  <div aria-busy="true" aria-describedby="progress-bar">
+      <!-- content is for this region is loading -->
+  </div>
+
+  <!-- ... -->
+
+  <progress id="progress-bar" aria-label="Content loading…"></progress><br><br>
+
+  <label for="pet-select">Choose a pet:</label>
+
+  <select name="pets" id="pet-select">
+      <option value="">--Please choose an option--</option>
+      <option value="dog">Dog</option>
+      <option value="cat">Cat</option>
+      <option value="hamster">Hamster</option>
+      <option value="parrot">Parrot</option>
+      <option value="spider">Spider</option>
+      <option value="goldfish">Goldfish</option>
+  </select>
+
+
 </body>
 </html>
