--- a/Case 13(html form).html
+++ b/Case 13(html form).html
@@ -91,6 +91,8 @@
 
   <label for="pet-select">Choose a pet:</label>
 
+
+<!--  select box-->
   <select name="pets" id="pet-select">
       <option value="">--Please choose an option--</option>
       <option value="dog">Dog</option>
@@ -98,9 +100,16 @@
       <option value="hamster">Hamster</option>
       <option value="parrot">Parrot</option>
       <option value="spider">Spider</option>
-      <option value="goldfish">Goldfish</option>
-  </select>
+      <option value="goldfish" selected>Goldfish</option>
+  </select><br><br>
 
+<!--text area-->
+        <label for="story">Tell us your story:</label><br>
+
+        <textarea id="story" name="story"
+                rows="5" cols="33">
+        It was a dark and stormy night...
+        </textarea>
 
 </body>
 </html>
