--- a/Case 13(html form).html
+++ b/Case 13(html form).html
@@ -109,7 +109,15 @@
         <textarea id="story" name="story"
                 rows="5" cols="33">
         It was a dark and stormy night...
-        </textarea>
+        </textarea><br><br>
+
+
+  <textarea
+          name="textarea"
+          rows="5"
+          cols="30"
+          placeholder="Comment text."></textarea>
+
 
 </body>
 </html>
