--- a/Case 13(html form).html
+++ b/Case 13(html form).html
@@ -105,9 +105,9 @@
 
 <!--text area-->
         <label for="story">Tell us your story:</label><br>
-
+  <!--                  useed deseble-->
         <textarea id="story" name="story"
-                rows="5" cols="33">
+                rows="5" cols="33" disabled>
         It was a dark and stormy night...
         </textarea><br><br>
 
