--- a/Case 14(The Details disclosure element).html
+++ b/Case 14(The Details disclosure element).html
@@ -7,6 +7,16 @@
 <body>
     <details><summary>sample</summary>
       Something small enough to escape casual notice.
+<!--      using paragraph-->
     </details>
+
+<!--    how to work page start point-->
+  <dialog open>
+    <p>sample dilog tested !</p>
+    <form method="dialog">
+      <button>click</button>
+    </form>
+  </dialog>
+
 </body>
 </html>
