add table content in calss

--- a/Case 12(table content).html
+++ b/Case 12(table content).html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="sample.css">
 </head>
 <body>
-      <table >
+      <!--<table>
         <caption>my sample table</caption>
 
         <tr>
@@ -46,6 +46,33 @@
           <td>total experiment</td>
         </tr>
 
+      </table>-->
+
+<!--th and td used table columns-->
+
+      <table>
+
+        <caption>Student Table</caption>
+
+        <thead>
+              <tr>
+                <th>name</th>
+                <th>address</th>
+                <th>contact</th>
+                <th>id</th>
+                <th>option</th>
+              </tr>
+        </thead>
+
+        <tbody>
+
+        </tbody>
+
+        <tfoot>
+
+        </tfoot>
+
       </table>
+
 </body>
 </html>
