add table contents

--- a/Case 12(table content).html
+++ b/Case 12(table content).html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Case 12</title>
-  <link rel="stylesheet" href="sample.css">
+<!--  <link rel="stylesheet" href="sample.css">-->
 </head>
 <body>
       <!--<table>
@@ -50,7 +50,7 @@
 
 <!--th and td used table columns-->
 
-      <table>
+      <table border="1">
 
         <caption>Student Table</caption>
 
@@ -65,8 +65,31 @@
         </thead>
 
         <tbody>
+              <tr>
+                <td>kamal</td>
+                <td>matara</td>
+                <td>0716175507</td>
+                <td>S001</td>
+                <td><button>delete</button><button>update</button><button>view</button></td>
+              </tr>
 
+              <tr>
+                <td>janaka</td>
+                <td>galle</td>
+                <td>0716175507</td>
+                <td>S002</td>
+                <td><button>delete</button><button>update</button><button>view</button></td>
+              </tr>
+
+              <tr>
+                <td>kumara</td>
+                <td>colombo</td>
+                <td>071617445</td>
+                <td>S003</td>
+                <td><button>delete</button><button>update</button><button>view</button></td>
+              </tr>
         </tbody>
+
 
         <tfoot>
 
