add table tfooter

--- a/Case 12(table content).html
+++ b/Case 12(table content).html
@@ -50,7 +50,7 @@
 
 <!--th and td used table columns-->
 
-      <table border="1">
+      <table border="1" width="600">
 
         <caption>Student Table</caption>
 
@@ -89,8 +89,15 @@
                 <td><button><img src="assets/my/icons8-delete-24.png"></button><button><img width="25" src="assets/my/icons8-edit-50.png"></button><button><img src="assets/my/icons8-view-26.png"></button></td>
               </tr>
         </tbody>
-        <tfoot>
 
+        <tfoot>
+        <tr>
+          <th>name</th>
+          <th>address</th>
+          <th>contact</th>
+          <th>id</th>
+          <th>option</th>
+        </tr>
         </tfoot>
 
       </table>
