--- a/Case 12(table content).html
+++ b/Case 12(table content).html
@@ -102,5 +102,73 @@
 
       </table>
 
+
+
+
+      <table border="1" width="600">
+
+        <caption>Student Table</caption>
+
+        <thead>
+        <tr>
+          <th>name</th>
+          <th>address</th>
+          <th>contact</th>
+          <th>id</th>
+          <th>option</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr>
+          <td>kamal</td>
+          <td>matara</td>
+          <td>0716175507</td>
+          <td>S001</td>
+          <td>
+            <button><img src="assets/my/icons8-delete-24.png"></button>
+            <button><img width="25" src="assets/my/icons8-edit-50.png"></button>
+            <button><img src="assets/my/icons8-view-26.png"></button>
+          </td>
+        </tr>
+
+        <tr>
+          <td>janaka</td>
+<!--          merging colms-->
+          <td colspan="2">galle</td>
+<!--          <td>0716175507</td>-->
+          <td rowspan="2">S002</td>
+          <td>
+            <button><img src="assets/my/icons8-delete-24.png"></button>
+            <button><img width="25" src="assets/my/icons8-edit-50.png"></button>
+            <button><img src="assets/my/icons8-view-26.png"></button>
+          </td>
+        </tr>
+
+        <tr>
+          <td>kumara</td>
+          <td>colombo</td>
+          <td>071617445</td>
+<!--          <td>S003</td>-->
+          <td>
+          <button><img src="assets/my/icons8-delete-24.png"></button>
+            <button><img width="25" src="assets/my/icons8-edit-50.png"></button>
+            <button><img src="assets/my/icons8-view-26.png"></button>
+          </td>
+        </tr>
+        </tbody>
+
+        <tfoot>
+        <tr>
+          <th>name</th>
+          <th>address</th>
+          <th>contact</th>
+          <th>id</th>
+          <th>option</th>
+        </tr>
+        </tfoot>
+
+      </table>
+
 </body>
 </html>
