--- a/Case 13(html form).html
+++ b/Case 13(html form).html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Case 13</title>
-  <link rel="stylesheet" href="sample.css">
+<!--  <link rel="stylesheet" href="sample.css">-->
 </head>
 <body>
   <button class="styled" type="button">Sample button</button><br><br>
@@ -118,6 +118,11 @@
           cols="30"
           placeholder="Comment text."></textarea>
 
+  <form oninput="result.value=parseInt(a.value)+parseInt(b.value)">
+      <input type="range" id="b" name="b" value="50" /> +
+      <input type="number" id="a" name="a" value="10" /> =
+      <output name="result" for="a b">60</output>
+  </form>
 
 </body>
 </html>
