add requed attribute

--- a/Case 13(html form).html
+++ b/Case 13(html form).html
@@ -124,5 +124,22 @@
       <output name="result" for="a b">60</output>
   </form>
 
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <form action="">
+      <label for="name">U name</label>
+      <input type="text" id="name" required>
+
+      <label for="id">U Id</label>
+      <input type="text" id="id" required>
+
+      <button type="submit">submit</button>
+
+  </form>
+
 </body>
 </html>
