--- a/in-class-task.html
+++ b/in-class-task.html
@@ -11,22 +11,22 @@
 
       <legend>Customer Manage</legend>
 
-      <label for="id">Customer ID</label>
+      <label for="id">Customer ID</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <input type="text" id="id"><br><br>
 
-      <label for="name">Customer Name</label>
+      <label for="name">Customer Name</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <input type="text" id="name"><br><br>
 
-      <label for="address">Customer Address</label>
+      <label for="address">Customer Address</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <input type="text" id="address"><br><br>
 
-      <label for="tp">Customer TP</label>
+      <label for="tp">Customer TP</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <input type="text" id="tp"><br><br>
 
-      <button type="submit">submit</button>
-      <button type="submit" formaction="Delete">Delete</button>
-      <button type="submit" formaction="Update" >Update</button>
-      <button type="submit" formaction="GetAll">GetAll</button>
+      <button type="submit">submit</button>&nbsp;&nbsp;
+      <button type="submit" formaction="Delete">Delete</button>&nbsp;&nbsp;
+      <button type="submit" formaction="Update" >Update</button>&nbsp;&nbsp;
+      <button type="submit" formaction="GetAll">GetAll</button>&nbsp;&nbsp;
       <button type="reset">Clear All</button>
 
     </fieldset>
