add form without button actions

--- a/in-class-task.html
+++ b/in-class-task.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-  <form action="goto_save">
+  <form action="goto_save" id="sample">
     <fieldset>
 
       <legend>Customer Manage</legend>
@@ -31,6 +31,6 @@
 
     </fieldset>
   </form>
-
+  <button form="sample" type="submit" formaction="GetAll">GetAll</button>
 </body>
 </html>
