add name attribute in form action

--- a/in-class-task.html
+++ b/in-class-task.html
@@ -12,16 +12,16 @@
       <legend>Customer Manage</legend>
 
       <label for="id">Customer ID</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <input type="text" id="id"><br><br>
+      <input name="id" type="text" id="id"><br><br>
 
       <label for="name">Customer Name</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <input type="text" id="name"><br><br>
+      <input name="name" type="text" id="name"><br><br>
 
       <label for="address">Customer Address</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <input type="text" id="address"><br><br>
+      <input name="address" type="text" id="address"><br><br>
 
       <label for="tp">Customer TP</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <input type="text" id="tp"><br><br>
+      <input name="Tp" type="tel" id="tp"><br><br>
 
       <button type="submit">submit</button>&nbsp;&nbsp;
       <button type="submit" formaction="Delete">Delete</button>&nbsp;&nbsp;
