--- a/Complex-Form.html
+++ b/Complex-Form.html
@@ -62,14 +62,14 @@
     </datalist><br><br>-->
 
     <!--<label for="hair-color">Hair color</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <input list="hair-colors" id="hair-color" name="ice-cream-choice">
+    <input type="color" list="hair-colors" id="hair-color" name="ice-cream-choice">
     <datalist id="hair-colors">
-      <option value="Black">
-      <option value="Brown">
-      <option value="other">
-    </datalist><br><br>-->
-
-    <label id="l2">Hair color</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <option value="#254E8BFF">
+      <option value="#254E8BFF">
+      <option value="#254E8BFF">
+    </datalist><br><br>
+-->
+    <!--<label id="l2">Hair color</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
     <label for="1">Black</label>
@@ -77,7 +77,17 @@
     <label for="2">Brown</label>
     <input type="radio"  id="2" name="ice-cream-choice"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <label for="3">Other</label>
-    <input type="radio"  id="3" name="ice-cream-choice"><br><br><br>
+    <input type="radio"  id="3" name="ice-cream-choice"><br><br><br>-->
+
+    <label for="colors">Hair Color</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <input type="color" list="redColors" id="colors" />
+
+    <datalist id="redColors">
+      <option value="#800000"></option>
+      <option value="#8B0000"></option>
+      <option value="#A52A2A"></option>
+      <option value="#DC143C"></option>
+    </datalist><br><br>
 
     <label for="gender">Gender</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <input list="genders" id="gender" name="ice-cream-choice">
@@ -122,7 +132,20 @@
     <label for="conditions">Accept the conditions</label>
     <input name="Tp" type="checkbox" id="conditions"><br><br>
 
-    <button style="background-color: #75a3e5" type="submit">submit</button>&nbsp;&nbsp;
+
+    <select id="listItem">
+      <optgroup label="After Al">
+        <option value="">GDSE</option>
+        <option value="">CMJD</option>
+      </optgroup>
+
+      <optgroup label="Graduate">
+        <option value="">RMJD</option>
+        <option value="">APJD</option>
+      </optgroup>
+    </select><br><br>
+
+    <button style="background-color: #254e8b" type="submit">submit</button>&nbsp;&nbsp;
 
   </fieldset>
 </form>
