add range for marks

--- a/Complex-Form.html
+++ b/Complex-Form.html
@@ -123,8 +123,11 @@
            oninput="amount.value=rangeInput.value">=
     <output id="amount" name="amount" for="rangeInput">0</output><br>
     <br><br>
-    <label for="mark">Your mark for Maths</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <input type="number"  id="mark" /><br><br>
+
+    <label for="mark1">Your mark for Maths</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <input type="range" id="mark1" name="s1" min="0" max="100" value="0"
+           oninput="sample.value=s1.value">=
+    <output id="sample" name="sample" for="s1">0</output><br><br>
 
     <label for="git">Git hub URL</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <input type="url"  id="git" /><br><br>
