radio button bug fixed

--- a/Complex-Form.html
+++ b/Complex-Form.html
@@ -44,13 +44,12 @@
 
     <label id="l1">Skin color</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-
     <label for="c3">Fair</label>
-    <input type="radio"  id="c1" name="ice-cream-choice"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <input type="radio"  id="c1" name="gender"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <label for="c2">Brown</label>
-    <input type="radio"  id="c2" name="ice-cream-choice"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <input type="radio"  id="c2" name="gender"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <label for="c1">Black</label>
-    <input type="radio"  id="c3" name="ice-cream-choice"><br><br><br>
+    <input type="radio"  id="c3" name="gender"><br><br><br>
 
 
     <!--<label for="color">Skin color</label><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
