change directory in html casses

--- a/HTML/Case 12(table content).html
+++ b/HTML/Case 12(table content).html
@@ -70,7 +70,7 @@
                 <td>matara</td>
                 <td>0716175507</td>
                 <td>S001</td>
-                <td><button><img src="assets/my/icons8-delete-24.png"></button><button><img width="25" src="assets/my/icons8-edit-50.png"></button><button><img src="assets/my/icons8-view-26.png"></button></td>
+                <td><button><img src="../assets/my/icons8-delete-24.png"></button><button><img width="25" src="../assets/my/icons8-edit-50.png"></button><button><img src="../assets/my/icons8-view-26.png"></button></td>
               </tr>
 
               <tr>
@@ -78,7 +78,7 @@
                 <td>galle</td>
                 <td>0716175507</td>
                 <td>S002</td>
-                <td><button><img src="assets/my/icons8-delete-24.png"></button><button><img width="25" src="assets/my/icons8-edit-50.png"></button><button><img src="assets/my/icons8-view-26.png"></button></td>
+                <td><button><img src="../assets/my/icons8-delete-24.png"></button><button><img width="25" src="../assets/my/icons8-edit-50.png"></button><button><img src="../assets/my/icons8-view-26.png"></button></td>
               </tr>
 
               <tr>
@@ -86,7 +86,7 @@
                 <td>colombo</td>
                 <td>071617445</td>
                 <td>S003</td>
-                <td><button><img src="assets/my/icons8-delete-24.png"></button><button><img width="25" src="assets/my/icons8-edit-50.png"></button><button><img src="assets/my/icons8-view-26.png"></button></td>
+                <td><button><img src="../assets/my/icons8-delete-24.png"></button><button><img width="25" src="../assets/my/icons8-edit-50.png"></button><button><img src="../assets/my/icons8-view-26.png"></button></td>
               </tr>
         </tbody>
 
@@ -128,9 +128,9 @@
           <td>0716175507</td>
           <td>S001</td>
           <td>
-            <button><img src="assets/my/icons8-delete-24.png"></button>
-            <button><img width="25" src="assets/my/icons8-edit-50.png"></button>
-            <button><img src="assets/my/icons8-view-26.png"></button>
+            <button><img src="../assets/my/icons8-delete-24.png"></button>
+            <button><img width="25" src="../assets/my/icons8-edit-50.png"></button>
+            <button><img src="../assets/my/icons8-view-26.png"></button>
           </td>
         </tr>
 
@@ -141,9 +141,9 @@
 <!--          <td>0716175507</td>-->
           <td rowspan="2">S002</td>
           <td>
-            <button><img src="assets/my/icons8-delete-24.png"></button>
-            <button><img width="25" src="assets/my/icons8-edit-50.png"></button>
-            <button><img src="assets/my/icons8-view-26.png"></button>
+            <button><img src="../assets/my/icons8-delete-24.png"></button>
+            <button><img width="25" src="../assets/my/icons8-edit-50.png"></button>
+            <button><img src="../assets/my/icons8-view-26.png"></button>
           </td>
         </tr>
 
@@ -153,9 +153,9 @@
           <td>071617445</td>
 <!--          <td>S003</td>-->
           <td>
-          <button><img src="assets/my/icons8-delete-24.png"></button>
-            <button><img width="25" src="assets/my/icons8-edit-50.png"></button>
-            <button><img src="assets/my/icons8-view-26.png"></button>
+          <button><img src="../assets/my/icons8-delete-24.png"></button>
+            <button><img width="25" src="../assets/my/icons8-edit-50.png"></button>
+            <button><img src="../assets/my/icons8-view-26.png"></button>
           </td>
         </tr>
         </tbody>
