--- a/HTML/Case 6(image and multimedia).html
+++ b/HTML/Case 6(image and multimedia).html
@@ -7,7 +7,7 @@
 <body>
 <!--    <img usemap="#testMap" src="assets/images/jpeg%20image.jpg" alt="sample image">-->
 <!--    <img src="assets/images/gif-image.gif" alt="sample image">-->
-    <img width="400" usemap="#testMap" src="assets/images/image.png" alt="sample image">
+    <img width="400" usemap="#testMap" src="../assets/images/image.png" alt="sample image">
 <!--    <img usemap="#testMap" src="assets/images/webp-image.webp" alt="sample image">-->
 
 <!--    <img width="300" src="assets/images/webp-image.webp" alt="sample image">-->
@@ -35,7 +35,7 @@
         <area shape="rect" href="https://github.com/savindaJ?tab=repositories" coords="400,700,200,200" alt="go to ijse">
     </map>
 
-<embed type="video/mp4" src="assets/video/movie-sample.mp4" width="640" height="480" title="Title of my video" />
+<embed type="video/mp4" src="../assets/video/movie-sample.mp4" width="640" height="480" title="Title of my video" />
 
 
 </body>
