--- a/HTML/Case 7(embeded content).html
+++ b/HTML/Case 7(embeded content).html
@@ -11,13 +11,13 @@
 
     <iframe src="https://google.com"></iframe>
 
-    <object width="1000" height="600" data="assets/doc1/pdf-data.pdf"></object>
+    <object width="1000" height="600" data="../assets/doc1/pdf-data.pdf"></object>
 
     <iframe width="500" height="600" src="https://chat.openai.com/c/1e2f379a-3baa-494d-8a8b-7a0b3b3bccf6"></iframe>
 
 <picture>
-    <source srcset="assets/images/image.png" media="(min-width: 600px)">
-    <img src="assets/images/git.gif">
+    <source srcset="../assets/images/image.png" media="(min-width: 600px)">
+    <img src="../assets/images/git.gif">
 </picture>
 <!--        device compatible changing image-->
 </body>
