--- a/HTML/in-class-task.html
+++ b/HTML/in-class-task.html
@@ -35,7 +35,7 @@
       <input type="date"id="date"><br><br>
 
       <label for="delete">Delete</label>&nbsp;&nbsp;
-      <input type="image" src="assets/my/icons8-delete-24.png" id="delete"><br><br>
+      <input type="image" src="../assets/my/icons8-delete-24.png" id="delete"><br><br>
 
       <label for="conditions">Accept</label>
       <input name="Tp" type="checkbox" id="conditions"><br><br>
