--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,6 +5,6 @@
     <title>CSS point 1</title>
 </head>
 <body>
-
+    <h1 style="color: #0a53be; font-size: 100px">inline CSS</h1>
 </body>
 </html>
