add Css in style element

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,6 +5,15 @@
     <title>CSS point 1</title>
 </head>
 <body>
+<style>
+    h1{
+        background-color: yellowgreen;
+        font-size: 100px;
+        border-radius: 20px;
+    }
+</style>
+
+    <p style="color: #0a53be; font-size: 100px">inline CSS</p>
     <h1 style="color: #0a53be; font-size: 100px">inline CSS</h1>
 </body>
 </html>
