--- a/CSS/index.html
+++ b/CSS/index.html
@@ -14,7 +14,7 @@
 </style>
 
     <p style="color: #0a53be; font-size: 100px">inline CSS</p>
-    <h1 style="color: #0a53be; font-size: 100px">inline CSS</h1>
-
+    <h1 style="color: #0a53be; font-size: 100px">Style CSS</h1>
+    <a href="index.html">click hear </a>
 </body>
 </html>
