--- a/myWorks/index.html
+++ b/myWorks/index.html
@@ -7,9 +7,78 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-        <div class="rectangle"></div>
+        <svg xmlns="http://www.w3.org/2000/svg" width="1350" height="632" viewBox="0 0 1350 632" fill="none">
+            <g filter="url(#filter0_b_168_4)">
+                <path d="M0.0187755 0H1340V483.484C280.015 504.632 -50.9805 806.809 0.0187755 483.484V0Z" fill="#FFF281" fill-opacity="0.42"/>
+            </g>
+            <defs>
+                <filter id="filter0_b_168_4" x="-205" y="-200" width="1705" height="1032" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                    <feGaussianBlur in="BackgroundImageFix" stdDeviation="100"/>
+                    <feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_168_4"/>
+                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_168_4" result="shape"/>
+                </filter>
+            </defs>
+        </svg>
 
-<!--        <div></div>-->
-        <hr>
+        <div class="bShape">
+            <svg xmlns="http://www.w3.org/2000/svg" width="372" height="357" viewBox="0 0 372 357" fill="none">
+                <g filter="url(#filter0_d_168_74)">
+                    <path d="M20.0262 16H351.026V308C133.525 282 18.001 373.754 20.0262 308V16Z" fill="white"/>
+                </g>
+                <defs>
+                    <filter id="filter0_d_168_74" x="0" y="0" width="371.026" height="356.237" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                        <feOffset dy="4"/>
+                        <feGaussianBlur stdDeviation="10"/>
+                        <feComposite in2="hardAlpha" operator="out"/>
+                        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.41 0"/>
+                        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_168_74"/>
+                        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_168_74" result="shape"/>
+                    </filter>
+                </defs>
+            </svg>
+        </div>
+
+        <!--<div class="bShape">
+            <svg xmlns="http://www.w3.org/2000/svg" width="372" height="357" viewBox="0 0 372 357" fill="none">
+                <g filter="url(#filter0_d_168_74)">
+                    <path d="M20.0262 16H351.026V308C133.525 282 18.001 373.754 20.0262 308V16Z" fill="white"/>
+                </g>
+                <defs>
+                    <filter id="filter0_d_168_74" x="0" y="0" width="371.026" height="356.237" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                        <feOffset dy="4"/>
+                        <feGaussianBlur stdDeviation="10"/>
+                        <feComposite in2="hardAlpha" operator="out"/>
+                        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.41 0"/>
+                        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_168_74"/>
+                        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_168_74" result="shape"/>
+                    </filter>
+                </defs>
+            </svg>
+        </div>-->
+
+        <!--<div class="bShape">
+            <svg xmlns="http://www.w3.org/2000/svg" width="372" height="357" viewBox="0 0 372 357" fill="none">
+                <g filter="url(#filter0_d_168_74)">
+                    <path d="M20.0262 16H351.026V308C133.525 282 18.001 373.754 20.0262 308V16Z" fill="white"/>
+                </g>
+                <defs>
+                    <filter id="filter0_d_168_74" x="0" y="0" width="371.026" height="356.237" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                        <feOffset dy="4"/>
+                        <feGaussianBlur stdDeviation="10"/>
+                        <feComposite in2="hardAlpha" operator="out"/>
+                        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.41 0"/>
+                        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_168_74"/>
+                        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_168_74" result="shape"/>
+                    </filter>
+                </defs>
+            </svg>
+        </div>-->
 </body>
 </html>
