--- a/myWorks/index.html
+++ b/myWorks/index.html
@@ -41,7 +41,7 @@
             </svg>
         </div>
 
-        <!--<div class="bShape">
+        <div class="bShape2">
             <svg xmlns="http://www.w3.org/2000/svg" width="372" height="357" viewBox="0 0 372 357" fill="none">
                 <g filter="url(#filter0_d_168_74)">
                     <path d="M20.0262 16H351.026V308C133.525 282 18.001 373.754 20.0262 308V16Z" fill="white"/>
@@ -59,7 +59,7 @@
                     </filter>
                 </defs>
             </svg>
-        </div>-->
+        </div>
 
         <!--<div class="bShape">
             <svg xmlns="http://www.w3.org/2000/svg" width="372" height="357" viewBox="0 0 372 357" fill="none">
